# Platireum-Network

./: CMakeLists.txt  Folder_struct.md  Hybrid Blockchain-DAG System.c++  Makefile  README.md  Whitepaper.md  crypto_helper.h  finality_chain.cpp  finality_chain.h  implementation_notes_en.md  main.cpp  node.cpp  node.h  transaction.cpp  transaction.h  transaction_dag.cpp  transaction_dag.h
src/: main.cpp  node.cpp  node.h
src/ai_engine/: ai_engine.cpp  ai_engine.h
src/api/: api_server.cpp  api_server.h  cli_client.cpp  cli_client.h
src/core/: block.cpp  block.h  blockchain.h  crypto_helper.cpp  crypto_helper.h  finality_chain.cpp  finality_chain.h  finality_chain_new.h  key_generator.cpp  key_generator.h  transaction.cpp  transaction.h  transaction_dag.cpp  transaction_dag.h  validator_manager.cpp  validator_manager.h
src/networking/: messages.h  networking.cpp  networking.h
src/smart_contracts/: contract.cpp  contract.h  vm_engine.cpp  vm_engine.h
src/storage/: serializer.h  storage.cpp  storage.h
src/utils/: id_generator.cpp  id_generator.h  json_utils.cpp  json_utils.h
tests/: poc_tests.cpp  test_poc_consensus.cpp
